# c_project_template

./: .gitignore  README.md
src/: CMakeLists.txt  main.c
src/test/: CMakeLists.txt  test_main.c
